--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Robot";
-    src: url("cv/assets/fonts/Roboto/roboto.woff format") format("woff");
+    font-family: "Roboto";
+    src: url("cv/assets/fonts/Roboto/roboto.woff") format("woff");
     font-display: swap;
 }
 
