--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Roboto";
+    font-family: "Robot";
     src: url("cv/assets/fonts/Roboto/roboto.woff") format("woff");
     font-display: swap;
 }
